<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="ST_ManifoldValve" Id="{f073cd80-1d86-4317-ae5a-812f4c6d74ea}">
    <Declaration><![CDATA[TYPE ST_ManifoldValve :
STRUCT
	
	(* Controls *)
	xSW : BOOL; //epics control
	qxDO : BOOL; //actual valve output
	(* Readbacks *)
	ixOPN : BOOL; //
	(* Soft variables *)
	xILK :	BOOL; // permissive bit

END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>